--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,10 @@ header {
     padding: 0px 20px 20px 5px;
   }
 
+  /* Banner with my name */
 .myName {
     float: left;
-    background:  #4dd3b1;
+    background:  #4aaaa5;
     padding: 20px 20px 0px 20px;
     font-size: 30px;
     margin-top: 0;
@@ -16,6 +17,7 @@ header {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* Unorganized list with links to About Profile and Contact */
 ul{
     margin-right: 20%;
 }
@@ -33,12 +35,13 @@ li{
     text-decoration:none;
 }
 
-
+/* background */
 body{
     position: relative;
     color:darkslategray;
     background-color: lightgray;
-    overflow: visible;
+    overflow: scroll;
+    background-image: url("../images/crossline-lines.png")
 
 }
      
@@ -47,16 +50,17 @@ h2{
     border-bottom: 1px rgb(207, 12, 12) solid;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+
 .Opening{
         margin: 0% 20% 0% 20%;
         margin-top: 40px;
         padding: 20px 20px 100px 20px;
         height:400px ;
         background-color: white;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-        
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
+
 img{
     float: left;
     height:250px;
@@ -64,6 +68,7 @@ img{
     margin-right: 20px;
     }
 
+    /* contact fields */
 input{
     width:99%;
     border: 1px darkslategray solid;
@@ -73,8 +78,9 @@ input{
     font-size: 16px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin:8px 0px 8px 0px;
+    border-radius: 4px;
 }
-
+/* leave a message field */
 .message{
     height: 150px;
     width: 99%;
@@ -86,13 +92,16 @@ input{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin:8px 0px 8px 0px;
     resize: none;
+    border-radius: 4px;
 }
 
+/* submit button */
 .submit{
     height: 40px;
     width: 100px;
 }
 
+/* portfolio squares */
 .box {
     position: relative;
     width: 150px;
@@ -100,7 +109,8 @@ input{
     background: darkslategray;
     border: 2px solid black;
     z-index: 1;
-    overflow: hidden;
+    background-image:url("../images/file-1.jpeg");
+    background-size: 150px;
   }
 
 .box-2{
@@ -111,6 +121,8 @@ input{
     z-index: 1;
     top: -170px;
     left: 25%;
+    background-image:url("../images/download.jpg");
+    background-size: 150px;
 }
 
 .box-3{
@@ -121,6 +133,8 @@ input{
     z-index: 1;
     top: -340px;
     left: 50%;
+    background-image:url("../images/download\ \(1\).jpg");
+    background-size: 150px;
 }
 
 .box-4{
@@ -131,10 +145,12 @@ input{
     z-index: 1;
     top: -510px;
     left: 75%;
+    background-image:url("../images/download\ \(2\).jpg");
+    background-size: 150px;
 }
 
 .box-5{
-    background:#4dd3b1;
+    background:#4aaaa5;
     height: 40px;
     width: 149px;
     top:-590px;
@@ -144,7 +160,7 @@ input{
 }
 
 .box-6{
-    background:#4dd3b1;
+    background:#4aaaa5;
     height: 40px;
     width: 149px;
     top:-646px;
@@ -154,7 +170,7 @@ input{
 }
 
 .box-7{
-    background:#4dd3b1;
+    background:#4aaaa5;
     height: 40px;
     width: 149px;
     top:-702px;
@@ -164,7 +180,7 @@ input{
 }
 
 .box-8{
-    background:#4dd3b1;
+    background:#4aaaa5;
     height: 40px;
     width: 149px;
     top:-758px;
