--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,18 @@ a:link{
     text-decoration: none;
 }
 
+a:visited {
+    color: green;
+  }
+  
+  a:hover {
+    color: red;
+  }
+  
+  a:active {
+    color: blue;
+  }
+
 li{
     list-style-type: none;
     float: right;
@@ -37,11 +49,10 @@ li{
 
 /* background */
 body{
-    position: relative;
     color:darkslategray;
     background-color: lightgray;
     overflow: scroll;
-    background-image: url("../images/crossline-lines.png")
+    background-image: url("../images/crossline-lines.png");
 
 }
      
@@ -53,12 +64,15 @@ h2{
 
 
 .Opening{
+        position: relative;
         margin: 0% 20% 0% 20%;
         margin-top: 40px;
         padding: 20px 20px 100px 20px;
-        height:400px ;
+        width: 960px;
+        height:450px;
         background-color: white;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+
 }
 
 img{
@@ -102,10 +116,18 @@ input{
 }
 
 /* portfolio squares */
-.box {
+
+.box-set{  
     position: relative;
+}
+
+.box{
+    position: absolute;
     width: 150px;
     height: 150px;
+}
+
+.box-1 {
     background: darkslategray;
     border: 2px solid black;
     z-index: 1;
@@ -114,37 +136,28 @@ input{
   }
 
 .box-2{
-    width: 150px;
-    height: 150px;
     background: darkslategray;
     border: 2px solid black;
     z-index: 1;
-    top: -170px;
-    left: 25%;
+    left: 250px;
     background-image:url("../images/download.jpg");
     background-size: 150px;
 }
 
 .box-3{
-    width: 150px;
-    height: 150px;
     background: darkslategray;
     border: 2px solid black;
     z-index: 1;
-    top: -340px;
-    left: 50%;
+    left: 500px;
     background-image:url("../images/download\ \(1\).jpg");
     background-size: 150px;
 }
 
 .box-4{
-     width: 150px;
-    height: 150px;
     background: darkslategray;
     border: 2px solid black;
     z-index: 1;
-    top: -510px;
-    left: 75%;
+    left: 750px;
     background-image:url("../images/download\ \(2\).jpg");
     background-size: 150px;
 }
@@ -153,9 +166,10 @@ input{
     background:#4aaaa5;
     height: 40px;
     width: 149px;
-    top:-590px;
-    left:.3%;
     border:none;
+    top:100px;
+    left:3px;
+    z-index: 2;
     text-align: center;
 }
 
@@ -163,9 +177,10 @@ input{
     background:#4aaaa5;
     height: 40px;
     width: 149px;
-    top:-646px;
-    left:25.3%;
     border:none;
+    z-index: 2;
+    left: 253px;
+    top:100px;
     text-align: center;
 }
 
@@ -173,9 +188,10 @@ input{
     background:#4aaaa5;
     height: 40px;
     width: 149px;
-    top:-702px;
-    left:50.3%;
     border:none;
+    z-index: 2;
+    left: 503px;
+    top:100px;
     text-align: center;
 }
 
@@ -183,9 +199,10 @@ input{
     background:#4aaaa5;
     height: 40px;
     width: 149px;
-    top:-758px;
-    left:75.3%;
     border:none;
+    z-index: 2;
+    left: 753px;
+    top:100px;
     text-align: center;
 }
 
@@ -193,5 +210,4 @@ footer{
         margin: 40px -20px 0px -20px;
         border-top: 10px  #4dd3b1 solid;
         border-bottom: 40px darkslategray solid;
-        overflow: hidden;
     }
